fix error pages on heroku

--- a/public/500.html
+++ b/public/500.html
@@ -3,21 +3,25 @@
 <head>
   <title>500 Nodegel 500</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" media="all" href="/assets/application-a23e78ed7a60147ec8e63c1966a7e11619108477d89558b9a82f431373bad23d.css" data-turbolinks-track="true" />
-  <script src="/assets/application-4e23b32e1e618a43278be62513e014fb8e7fd8cb085067830d8e8d5a5efeec97.js" data-turbolinks-track="true"></script>
-  <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="cChYIR80g0X9Ts159PwEoSiLzX0svuqfPaSz8Zcg3SPlZ5h+pwXkuZF9TrhHGQ3/AHSnVDVHoU1E69r90KissQ==" />
+  <style>
+body {
+  font-size: 24px;
+  font-family: 'Open Sans', Verdana, sans-serif;
+  background-color: black;
+  color: white;
+  text-align: center;
+
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+    -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+    animation: fadein 2s;
+}
+  </style>
 </head>
 <body>
 
 <h1 style="font-size:800%;color:#333;">500</h1>
-
-
-<div id="footer">
-<hr>
-  <a href="/ /log in">[ log in ]</a>
-  <a href="/ /sign up">[ sign up ]</a>
-</div>
 
 </body>
 </html>
